--- a/deploy.yml
+++ b/deploy.yml
@@ -5,3 +5,9 @@
   - name: Announce Ansible is running
     debug:
       msg: "Running Ansible"
+
+  tasks:
+    - name: Run, Apache
+      block:
+      - name: apache2
+        apt:
