--- a/deploy.yml
+++ b/deploy.yml
@@ -10,8 +10,13 @@
     become: true
     apt: 
       name: apache2
+      state: present
   - name: Add PHP 7.0 repo
     become: true
     apt_repository:
       repo: 'ppa:ondrej/php'
-
+      state: present
+  - name: Install PHP 7.0
+    become: true
+    apt:
+      name: php7.0
